Update. CSS styling & layout

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 
         <section id="photos1">
-
+            <div id="yellow-square"></div>
             <div class="photo1"></div> <!-- Play with aspect ratio and full width to get the look I want -->
             <div class="photo2"></div> <!-- Play with aspect ratio and full width to get the look I want -->
 
@@ -92,7 +92,8 @@
 
 
         <section id="why-abelton">
-            <video src="#"></video>
+            <box-icon name='play-circle' id="play-circle" size="lg" color='#0000ff' ></box-icon>
+            <img src="https://ableton-production.imgix.net/about/poster-juanpe.jpg?auto=compress%2Cformat&dpr=2&ixjsv=1.1.3&q=50&w=800" alt="Abelton Video">
         </section>
 
 
