--- a/index.html
+++ b/index.html
@@ -108,7 +108,11 @@
 
 
         <section id="photos2">
-            <div class="photo1"></div> <!-- Play with aspect ratio and full width to get the look I want -->
+            <div id="green-background"></div>
+            <div class="photo1">
+                <img src="https://ableton-production.imgix.net/about/photo-3.jpg?dpr=2&fit=crop&h=400&ixjsv=1.1.3&q=50&w=533" alt="Abelton Photo" id="img1">
+                <img src="https://ableton-production.imgix.net/about/photo-4.jpg?dpr=2&fit=crop&h=400&ixjsv=1.1.3&q=50&w=533" alt="Abelton Photo 2" id="img2">
+            </div> <!-- Play with aspect ratio and full width to get the look I want -->
             <div class="photo2"></div> <!-- Play with aspect ratio and full width to get the look I want -->
         </section>
 
@@ -139,6 +143,7 @@
 
 
         <section id="photos4">
+            <div id="purple-background"></div>
             <div class="photo1"></div> <!-- Play with aspect ratio and full width to get the look I want -->
             <div class="photo2"></div> <!-- Play with aspect ratio and full width to get the look I want -->
         </section>
@@ -163,6 +168,7 @@
                     be a part of it, please join us.</h2>
                 <div id="proud-link">
                     <a href="#">See latest jobs</a>
+                    <box-icon name='chevron-right' color="#0000ff" size="md"></box-icon>
                 </div>
             </div>
         </section>
